# irReaderOpenCv

./: .env.cmake  CMakeLists.txt  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
